# cmake_test_repo

./: .gitignore  .gitmodules  CMakeLists.txt  toolchain.cmake
app/: CMakeLists.txt  app.cpp  app.hpp
linker_scripts/: twrkv58f220m_led_blinky_Debug.ld  twrkv58f220m_led_blinky_Debug_library.ld  twrkv58f220m_led_blinky_Debug_memory.ld
src/: CMakeLists.txt  main.cpp  main.hpp
tests/: CMakeLists.txt  test_catch.cpp  test_doctest.cpp
